--- a/css/orrery.css
+++ b/css/orrery.css
@@ -178,11 +178,11 @@ button img {
 }
 
 #splashScreen {
-    width: 30%;
-    height: 30%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1rem;
     position: absolute;
-    left:35%;
-    top: 35%;
     z-index:10;
     text-align: center;
     color: #374151;
@@ -228,13 +228,12 @@ button img {
 
 #splash-loading-wrapper {
     position: relative;
-    top: -10%;
+    margin-top: -20%;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 150px;
     height: 150px;
-    margin-bottom: -1.5rem;
 }
 
 #loading-ring {
